# e-commerce.rs

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/2022-05-29-005344_user/: up.sql
src/: main.rs
src/db/: models.rs  schema.rs
