[package]
name = "e-commerce"
version = "0.1.0"
edition = "2021"
authors = ["IkenoXamos <moberlies1337@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"

[dependencies.rocket_sync_db_pools]
features = ["diesel_sqlite_pool", "sqlite_pool"]
version = "0.1.0-rc.2"
